[package]
name = "pixiv_novel_download"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.6", features = ["blocking","rustls-tls"]}
scraper = "0.12.0"
json = "0.12.4"
clap = "2.33.3"
openssl = { version = "0.10.38", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "z"
lto = true